Update and rename gcsi2017ProfilesAssemble.json to gcsi2017ProfileAssemble.json

--- a/gcsi2017ProfileAssemble.json
+++ b/gcsi2017ProfileAssemble.json
@@ -1,6 +1,6 @@
 {
   "pipeline": {
-    "name": "gcsi2017ProfilesAssemble"
+    "name": "gcsi2017ProfileAssemble"
   },
   "transform": {
     "image": "bhklab/pharmacogx:v3",
